# cuda-filters

./: CMakeLists.txt  README.md
include/: utils.hpp
src/: blurred.cu  main.cc  toGreyScale.cu
